fixed the reports on the first review: based on reposnsiveness on mobiles, using css flex in my project

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   background-color: white;
   line-height: 1.5;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
+  padding: 0 !important;
 }
 
 a {
@@ -23,14 +24,17 @@ a {
 }
 
 /* header */
+header {
+  z-index: 5;
+}
 
 header a {
   color: white;
-  font-size: 1.8rem;
+  font-size: 1rem;
 }
 
 .logo-img {
-  font-size: 2.5rem;
+  font-size: 2em;
 }
 
 /* main section */
@@ -46,6 +50,7 @@ header a {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  display: flex;
 }
 
 .main-content {
@@ -63,17 +68,26 @@ header a {
 }
 
 .app-img {
-  background-image: url("../images/sysproject.jpg");
+  /* background-image: url("../images/sysproject.jpg"); */
   height: 270px;
-  width: 270px;
+  width: 100%;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 50% !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.app-content {
-  /* height: 300px; */
+.app-img img {
+  height: 15em;
+  width: 15em;
+  border-radius: 50%;
+}
+
+app-content button {
+  width: 3em;
 }
 
 .main-content button {
@@ -86,6 +100,13 @@ header a {
 
 .how-it-works {
   background-color: rgba(225, 225, 225, 0.6);
+  font-size: small !important;
+}
+
+.work-con {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
@@ -132,4 +153,50 @@ footer .maps {
 
 .about-in {
   font-size: small;
+
+}
+
+/* media queries */
+@media all and (max-width: 446px) {
+  footer .maps {
+    display: none;
+  }
+
+  footer ul li:nth-child(1),
+  footer ul li:nth-child(3),
+  footer ul li:nth-child(5),
+  footer ul li:nth-child(7) {
+    display: none;
+  }
+  footer ul li a {
+    font-size: small !important;
+  }
+  .how-it-works {
+    display: none;
+  }
+  .logo-img {
+    font-size: 1em;
+  }
+  nav ul li:nth-child(1),
+  nav ul li:nth-child(2),
+  nav ul li:nth-child(3) {
+    display: none;
+  }
+  .title {
+    font-size: 1.8em;
+    text-align: center;
+  }
+  .app-content h4 {
+    font-size: 1em;
+  }
+  footer h3 p {
+    font-size: small !important;
+  }
+  .main-inner h2 {
+    font-size: 1.7em;
+    margin: 10px auto;
+  }
+  .demo h2 {
+    font-size: 2em;
+  }
 }
